--- a/scss/posts.scss
+++ b/scss/posts.scss
@@ -1,4 +1,4 @@
-form.todos {
+form.posts {
   width: 100%;
   margin: 0 0 1em 0;
   padding: 1em;
@@ -18,7 +18,7 @@ form.todos {
   }
 }
 
-.tasks {
+.rooms {
   width: 100%;
   list-style: none;
   padding: 0;
