--- a/views/includes/topnav.jade
+++ b/views/includes/topnav.jade
@@ -18,6 +18,8 @@
             a(href='/users/#{currentUser._id}') Profile
           li
             a(href='/signout') Signout
+          li
+            a(href='/hosting') Hosting
         else
           li
             button.btn.btn-default(type='button', data-toggle='modal', data-target='#signin')  Signin
