--- a/views/index.jade
+++ b/views/index.jade
@@ -7,15 +7,14 @@ block hero-unit
 
 block content
   .container
-      form.form-search(action='/search', method='POST')
+      form.form(action='/posts', method='POST')
         label(for='position') 위치
         input(type='postion', id='position', name='position' placeholder='position')
         label(for='date') 날짜
         input(type='checkin', id='checkin', name='checkin' placeholder='checkin')
         input(type='checkout', id='checkout', name='checkout' placeholder='checkout')
         label(for='people_number') 숙박인원
-        input(type='checkin', id='checkin', name='checkin' placeholder='checkout')
-
+        input(type='checkin', id='checkin', name='checkin' placeholder='number of people')
         button.btn.btn-lg.btn-primary.btn-block(type='submit') 숙박검색
       
       div.modal.fade(id='signup', role='dialog')
