--- a/views/hosting.jade
+++ b/views/hosting.jade
@@ -34,6 +34,7 @@ block content
         placeholder='Fee', required, autofocus
       )
       .form-group
+        label Number of People
         select(name='person')
           option(value='1',selected) 1
           option(value='2') 2
