--- a/views/hosting.jade
+++ b/views/hosting.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   .container
-    form(id='form-room', action='/rooms', method='POST')
+    form(id='form-room', action='/rooms/#{currentUser.id}', method='POST')
       label(for='name') Name
       input(
         type='name', id='name', name='name', class='form-control', 
