--- a/views/includes/topnav.jade
+++ b/views/includes/topnav.jade
@@ -19,7 +19,7 @@
           li
             a(href='/signout') Signout
           li
-            a(href='/hosting') Hosting
+            a(href='/hosting/#{currentUser._id}') Hosting
         else
           li
             button.btn.btn-default(type='button', data-toggle='modal', data-target='#signin')  Signin
