--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -200,3 +200,27 @@ a {
     .footer .container .text-muted {
       margin: 20px 0;
       color: #bbb; }
+
+.form {
+  position: relative; }
+  .form input {
+    width: 15em; }
+  .form .fa-spin {
+    display: none;
+    position: absolute;
+    left: 16em;
+    top: 0.5em; }
+  .form.loading .fa-spin {
+    display: block; }
+  .form .suggest-box {
+    position: absolute;
+    background-color: #212427;
+    color: #fff;
+    margin: 0;
+    padding: 0; }
+    .form .suggest-box li {
+      padding: 0.5em 1em;
+      cursor: pointer;
+      list-style-type: none; }
+      .form .suggest-box li:hover {
+        background-color: #659CD8; }
