--- a/scss/style.scss
+++ b/scss/style.scss
@@ -46,3 +46,35 @@ a {
     }
   }
 }
+.form {
+  position: relative;
+  input {
+    width: 15em;
+  }
+  .fa-spin {
+    display: none;
+    position: absolute;
+    left: 16em;
+    top: 0.5em;
+  }
+  &.loading {
+    .fa-spin {
+      display: block;
+    }
+  }
+  .suggest-box {
+    position: absolute;
+    background-color: #212427;
+    color: #fff;
+    margin: 0;
+    padding: 0;
+    li {
+      padding: 0.5em 1em;
+      cursor: pointer;
+      list-style-type: none;
+      &:hover {
+        background-color: #659CD8;
+      }
+    }
+  }
+}
