--- a/views/index.jade
+++ b/views/index.jade
@@ -7,9 +7,11 @@ block hero-unit
 
 block content
   .container
-      form.form(action='/posts', method='POST')
+      form(action='/posts', method='POST')
         label(for='position') 위치
-        input(type='postion', id='position', name='position' placeholder='position')
+        input(type='postion', id='position', name='position' placeholder='city')
+        i.fa.fa-spin.fa-spinner
+        ul.suggest-box
         label(for='date') 날짜
         input(type='checkin', id='checkin', name='checkin' placeholder='checkin')
         input(type='checkout', id='checkout', name='checkout' placeholder='checkout')
@@ -28,6 +30,8 @@ block content
                 .form-group
                   label(for='name') Name
                   input.form-control(type='text', id='name', name='name', placeholder='Your name')
+                  i.fa.fa-spin.fa-spinner
+                  ul.suggest-box
                 .form-group
                   label(for='email') Email address
                   input.form-control(type='email', id='email', name='email', placeholder='Email')
@@ -61,10 +65,7 @@ block content
                   placeholder='Password', required, autofocus
                 )
                 button.btn.btn-lg.btn-primary.btn-block(type='submit') 로그인
-                | 
-                a.btn.btn-info.btn-lg.btn-block(href='/auth/facebook')
-                  i.fa.fa-facebook.fa-lg
-                  | &nbsp; &nbsp;Signin with Facebook
-                hr
+  
+  script(src='/javascripts/autocomplete.js')            
            
          
