--- a/views/users/edit.jade
+++ b/views/users/edit.jade
@@ -3,7 +3,7 @@ extends ../layout
 block content
   .container
     h1.page-header 회원정보 수정
-    form(action='/users/#{user._id}?_method=PUT', method='POST')
+    form(action='/users/#{currentUser._id}?_method=PUT', method='POST')
       .form-group
         label(for='name') Name
         input.form-control(type='text', id='name', name='name', placeholder='Your name', value=user.name)
