--- a/views/includes/posts-side.jade
+++ b/views/includes/posts-side.jade
@@ -1,5 +1,5 @@
-script(type="text/javascript", src="//maps.googleapis.com/maps/api/js?v=3.exp&sensor=false")
-script(type="text/javascript", src="map.js")
+script(src='/javascripts/map.js')
+p Map
+div#map(style="width=300px;height:700px")
+script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap")  
 
-div#map-canvas(style="width=300px;height:300px")
-  
