--- a/views/includes/posts-main.jade
+++ b/views/includes/posts-main.jade
@@ -18,7 +18,7 @@ h1.page-header List
            td= room.city
            td= room.fee
            td= room.userName
-           if (room.reservation)
+           if (room.permission)
             td impossible
            else
             td possible
