--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,15 +12,17 @@ a {
 
 .jumbotron {
   margin-top: -1em;
-  background: url('/images/bg.jpg') no-repeat left top;
   -webkit-background-size: 100%;
   -moz-background-size: 100%;
   -o-background-size: 100%;
   background-size: 100%;
   min-height: 20em;
-  color: #fff;
+  color: red;
+  background: white;
   text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
 }
+
+
 
 .form-actions {
   padding: 19px 20px 20px;
@@ -47,7 +49,7 @@ a {
   }
 }
 .form {
-  position: relative;
+  position: inline;
   input {
     width: 15em;
   }
@@ -77,4 +79,14 @@ a {
       }
     }
   }
+}
+
+.room_form{
+  display: inline;
+}
+
+.room_button{
+  position:absolute;
+  right: 250px;
+  width: 200px;
 }
