--- a/views/index.jade
+++ b/views/index.jade
@@ -7,18 +7,18 @@ block hero-unit
 
 block content
   .container
-      form(action='/posts', method='POST')
+      form.room_form(action='/posts', method='POST')
         .form
           label(for='position') 위치
           input(type='postion', id='position', name='position' placeholder='city')
           i.fa.fa-spin.fa-spinner
           ul.suggest-box
-        label(for='date') 날짜
-        input(type='checkin', id='checkin', name='checkin' placeholder='checkin')
-        input(type='checkout', id='checkout', name='checkout' placeholder='checkout')
-        label(for='people_number') 숙박인원
-        input(type='checkin', id='checkin', name='checkin' placeholder='number of people')
-        button.btn.btn-lg.btn-primary.btn-block(type='submit') 숙박검색
+          label(for='date') 날짜
+          input(type='checkin', id='checkin', name='checkin' placeholder='checkin')
+          input(type='checkout', id='checkout', name='checkout' placeholder='checkout')
+          label(for='people_number') 숙박인원
+          input(type='checkin', id='checkin', name='checkin' placeholder='number of people')
+          button.btn.btn-lg.btn-danger.btn-block.room_button(type='submit') 숙박검색
       
       div.modal.fade(id='signup', role='dialog')
         div.modal-dialog
@@ -31,8 +31,6 @@ block content
                 .form-group
                   label(for='name') Name
                   input.form-control(type='text', id='name', name='name', placeholder='Your name')
-                  i.fa.fa-spin.fa-spinner
-                  ul.suggest-box
                 .form-group
                   label(for='email') Email address
                   input.form-control(type='email', id='email', name='email', placeholder='Email')
@@ -67,6 +65,8 @@ block content
                 )
                 button.btn.btn-lg.btn-primary.btn-block(type='submit') 로그인
   
-  script(src='/javascripts/autocomplete.js')            
+  
+  script(src='/javascripts/autocomplete.js') 
+             
            
          
