--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -161,74 +161,107 @@ form.posts {
 #main.loading .spinner {
   display: block; }
 
-body {
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  margin-top: 50px;
-  padding-top: 1em; }
-  body > .main-content {
-    min-height: 400px; }
-
-a {
-  color: #00B7FF; }
-
-.jumbotron {
-  margin-top: -1em;
-  -webkit-background-size: 100%;
-  -moz-background-size: 100%;
-  -o-background-size: 100%;
-  background-size: 100%;
-  min-height: 20em;
-  color: red;
-  background: white;
-  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3); }
-
-.form-actions {
-  padding: 19px 20px 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  background-color: #f5f5f5;
-  border-top: 1px solid #e5e5e5; }
-
-.footer {
-  margin-top: 1em;
-  width: 100%;
-  height: 60px;
-  background-color: #f5f5f5; }
-  .footer .container {
-    padding-right: 1em;
-    padding-left: 1em; }
-    .footer .container .text-muted {
-      margin: 20px 0;
-      color: #bbb; }
-
-.form {
-  position: inline; }
-  .form input {
-    width: 15em; }
-  .form .fa-spin {
-    display: none;
+@media (min-width: 700px) {
+  body {
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    margin-top: 50px;
+    padding-top: 1em; }
+    body > .main-content {
+      min-height: 400px; }
+  a {
+    color: #00B7FF; }
+  .jumbotron {
+    margin-top: -1em;
+    -webkit-background-size: 100%;
+    -moz-background-size: 100%;
+    -o-background-size: 100%;
+    background-size: 100%;
+    min-height: 20em;
+    color: red;
+    background: white;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3); }
+  .form-actions {
+    padding: 19px 20px 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background-color: #f5f5f5;
+    border-top: 1px solid #e5e5e5; }
+  .footer {
+    margin-top: 1em;
+    width: 100%;
+    height: 60px;
+    background-color: #f5f5f5; }
+    .footer .container {
+      padding-right: 1em;
+      padding-left: 1em; }
+      .footer .container .text-muted {
+        margin: 20px 0;
+        color: #bbb; }
+  .form {
+    position: inline; }
+    .form input {
+      width: 15em; }
+    .form .fa-spin {
+      display: none;
+      position: absolute;
+      left: 16em;
+      top: 0.5em; }
+    .form.loading .fa-spin {
+      display: block; }
+    .form .suggest-box {
+      position: absolute;
+      background-color: #212427;
+      color: #fff;
+      margin: 0;
+      padding: 0; }
+      .form .suggest-box li {
+        padding: 0.5em 1em;
+        cursor: pointer;
+        list-style-type: none; }
+        .form .suggest-box li:hover {
+          background-color: #659CD8; }
+  .room_form {
+    display: inline; }
+  .room_button {
     position: absolute;
-    left: 16em;
-    top: 0.5em; }
-  .form.loading .fa-spin {
-    display: block; }
-  .form .suggest-box {
-    position: absolute;
-    background-color: #212427;
-    color: #fff;
-    margin: 0;
-    padding: 0; }
-    .form .suggest-box li {
-      padding: 0.5em 1em;
-      cursor: pointer;
-      list-style-type: none; }
-      .form .suggest-box li:hover {
-        background-color: #659CD8; }
+    right: 250px;
+    width: 200px; } }
 
-.room_form {
-  display: inline; }
-
-.room_button {
-  position: absolute;
-  right: 250px;
-  width: 200px; }
+@media screen and (max-width: 400px) {
+  body {
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    margin-top: 50px;
+    padding-top: 1em; }
+    body > .main-content {
+      min-height: 400px; }
+  .form {
+    position: table; }
+    .form input {
+      width: 15em; }
+    .form .fa-spin {
+      display: none;
+      position: absolute;
+      left: 16em;
+      top: 0.5em; }
+    .form.loading .fa-spin {
+      display: block; }
+    .form .suggest-box {
+      position: absolute;
+      background-color: #212427;
+      color: #fff;
+      margin: 0;
+      padding: 0; }
+      .form .suggest-box li {
+        padding: 0.5em 1em;
+        cursor: pointer;
+        list-style-type: none; }
+        .form .suggest-box li:hover {
+          background-color: #659CD8; }
+  .room_form {
+    display: table; }
+    .room_form label {
+      display: none; }
+  .room_button {
+    position: relative; }
+  .reDe {
+    display: none; } }
