--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,92 +1,151 @@
-body {
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  margin-top: 50px;
-  padding-top: 1em;
-  & > .main-content {
-    min-height: 400px;
-  }
-}
-a {
-  color: #00B7FF
-}
-
-.jumbotron {
-  margin-top: -1em;
-  -webkit-background-size: 100%;
-  -moz-background-size: 100%;
-  -o-background-size: 100%;
-  background-size: 100%;
-  min-height: 20em;
-  color: red;
-  background: white;
-  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-}
-
-
-
-.form-actions {
-  padding: 19px 20px 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  background-color: #f5f5f5;
-  border-top: 1px solid #e5e5e5;
-}
-
-.footer {
-  margin-top: 1em;
-  width: 100%;
-  height: 60px;
-  background-color: #f5f5f5;
-
-  .container {
-    padding-right: 1em;
-    padding-left: 1em;
-
-    .text-muted {
-      margin: 20px 0;
-      color: #bbb;
+@media (min-width: 700px){ 
+  body {
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    margin-top: 50px;
+    padding-top: 1em;
+    & > .main-content {
+      min-height: 400px;
     }
   }
-}
-.form {
-  position: inline;
-  input {
-    width: 15em;
+  a {
+    color: #00B7FF
   }
-  .fa-spin {
-    display: none;
-    position: absolute;
-    left: 16em;
-    top: 0.5em;
+
+  .jumbotron {
+    margin-top: -1em;
+    -webkit-background-size: 100%;
+    -moz-background-size: 100%;
+    -o-background-size: 100%;
+    background-size: 100%;
+    min-height: 20em;
+    color: red;
+    background: white;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
   }
-  &.loading {
-    .fa-spin {
-      display: block;
-    }
+
+
+
+  .form-actions {
+    padding: 19px 20px 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background-color: #f5f5f5;
+    border-top: 1px solid #e5e5e5;
   }
-  .suggest-box {
-    position: absolute;
-    background-color: #212427;
-    color: #fff;
-    margin: 0;
-    padding: 0;
-    li {
-      padding: 0.5em 1em;
-      cursor: pointer;
-      list-style-type: none;
-      &:hover {
-        background-color: #659CD8;
+
+  .footer {
+    margin-top: 1em;
+    width: 100%;
+    height: 60px;
+    background-color: #f5f5f5;
+
+    .container {
+      padding-right: 1em;
+      padding-left: 1em;
+
+      .text-muted {
+        margin: 20px 0;
+        color: #bbb;
       }
     }
   }
+  .form {
+    position: inline;
+    input {
+      width: 15em;
+    }
+    .fa-spin {
+      display: none;
+      position: absolute;
+      left: 16em;
+      top: 0.5em;
+    }
+    &.loading {
+      .fa-spin {
+        display: block;
+      }
+    }
+    .suggest-box {
+      position: absolute;
+      background-color: #212427;
+      color: #fff;
+      margin: 0;
+      padding: 0;
+      li {
+        padding: 0.5em 1em;
+        cursor: pointer;
+        list-style-type: none;
+        &:hover {
+          background-color: #659CD8;
+        }
+      }
+    }
+  }
+
+  .room_form{
+    display: inline;
+  }
+
+  .room_button{
+    position:absolute;
+    right: 250px;
+    width: 200px;
+  }
 }
 
-.room_form{
-  display: inline;
-}
-
-.room_button{
-  position:absolute;
-  right: 250px;
-  width: 200px;
+@media screen and (max-width: 400px){ 
+    body {
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    margin-top: 50px;
+    padding-top: 1em;
+    & > .main-content {
+      min-height: 400px;
+    }
+  }
+   .form {
+    position: table;
+    input {
+      width: 15em;
+    }
+    
+    
+    .fa-spin {
+      display: none;
+      position: absolute;
+      left: 16em;
+      top: 0.5em;
+    }
+    &.loading {
+      .fa-spin {
+        display: block;
+      }
+    }
+    .suggest-box {
+      position: absolute;
+      background-color: #212427;
+      color: #fff;
+      margin: 0;
+      padding: 0;
+      li {
+        padding: 0.5em 1em;
+        cursor: pointer;
+        list-style-type: none;
+        &:hover {
+          background-color: #659CD8;
+        }
+      }
+    }
+  }
+  .room_form{
+    display: table;
+    label{
+      display: none;
+    }
+  }
+  .room_button{
+    position: relative;
+  }
+  .reDe{
+    display: none;
+  }
 }
