--- a/views/users/index.jade
+++ b/views/users/index.jade
@@ -9,7 +9,7 @@ block content
         tr
           th 이름
           th 이메일
-          th 가입일시
+          th.reDe 가입일시
           th
       tbody
         each user in users
@@ -17,6 +17,6 @@ block content
             td
               a(href='/users/#{user._id}')= user.name
             td= user.email
-            td= moment(user.createdAt).format('YYYY-MM-DD HH:mm:ss')
+            td.reDe= moment(user.createdAt).format('YYYY-MM-DD HH:mm:ss')
             td
               a.btn.btn-xs.btn-default(href='/users/#{user._id}?_method=DELETE') 삭제
